--- a/flutter_animation/pubspec.yaml
+++ b/flutter_animation/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   flutter_screenutil: ^5.0.0+2
   svgaplayer_flutter: ^2.1.2
+  flare_flutter: ^3.0.2
   fluttertoast: ^8.0.8
   cupertino_icons: ^1.0.2
 
@@ -30,6 +31,7 @@ flutter:
 
   assets:
     - files/svga/
+    - files/flare/
     - files/musics/
     - assets/images/
 
