--- a/flutter_animation/pubspec.yaml
+++ b/flutter_animation/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   svgaplayer_flutter: ^2.1.2
   flare_flutter: ^3.0.2
+  audioplayers: ^0.20.1
   fluttertoast: ^8.0.8
   cupertino_icons: ^1.0.2
 
@@ -30,9 +31,9 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - files/svga/
     - files/flare/
-    - files/musics/
     - assets/images/
 
 
