--- a/flutter_animation/pubspec.yaml
+++ b/flutter_animation/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   svgaplayer_flutter: ^2.1.2
   flare_flutter: ^3.0.2
+  lottie: ^1.2.1
   audioplayers: ^0.20.1
   fluttertoast: ^8.0.8
   cupertino_icons: ^1.0.2
@@ -35,6 +36,9 @@ flutter:
     - files/svga/
     - files/flare/
     - assets/images/
+    - files/lotties/
+    - files/lotties/win_bg
+    - files/lotties/win_bg/images
 
 
   # To add custom fonts to your application, add a fonts section here,
